--- a/BESHOP/Base.lproj/Main.storyboard
+++ b/BESHOP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="C7w-EQ-UbG">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -66,7 +66,7 @@
         <!--Lend View Controller-->
         <scene sceneID="WwW-fv-6yB">
             <objects>
-                <viewController id="15W-at-Bv9" customClass="LendViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Lend" id="15W-at-Bv9" customClass="LendViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Eb4-6v-q4q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -111,21 +111,37 @@
         <!--Borrow View Controller-->
         <scene sceneID="FzW-id-Dpd">
             <objects>
-                <viewController id="C7w-EQ-UbG" customClass="BorrowViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Borrow" id="C7w-EQ-UbG" customClass="BorrowViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="w7V-ek-RDX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8Kd-zX-7wt">
-                                <rect key="frame" x="248" y="410" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="260" sectionHeaderHeight="22" sectionFooterHeight="22" id="CSC-L9-kBS">
+                                <rect key="frame" x="0.0" y="64" width="375" height="608"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="260" id="zaD-Du-4Vh" customClass="ItemTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="375" height="260"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zaD-Du-4Vh" id="RH2-wC-2bW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="259.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <segue destination="15W-at-Bv9" kind="modal" identifier="ToLend" modalTransitionStyle="flipHorizontal" id="YCe-Yl-2hI"/>
+                                    <outlet property="dataSource" destination="C7w-EQ-UbG" id="j7C-n7-Eha"/>
+                                    <outlet property="delegate" destination="C7w-EQ-UbG" id="hkF-xj-YOK"/>
                                 </connections>
-                            </button>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" id="BKh-5p-kaQ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="New" id="Oh1-o7-XDP"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
