--- a/BESHOP/Base.lproj/Main.storyboard
+++ b/BESHOP/Base.lproj/Main.storyboard
@@ -99,6 +99,20 @@
             </objects>
             <point key="canvasLocation" x="510.5" y="230.5"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="ysr-L8-8V4">
+            <objects>
+                <viewController id="CL5-1L-1UD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0hQ-yd-3IT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XNm-Vf-HAF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="488" y="-479"/>
+        </scene>
         <!--Borrow View Controller-->
         <scene sceneID="FzW-id-Dpd">
             <objects>
